[package]
name = "t1"
version = "0.1.0"
authors = ["suhanyujie <suhanyujie@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
futures = "0.3"
rust-php = {path="../rust-php"}
asyncnsq = "0.1.0"
async-std = "1.5.0"
serde = "1.0.104"
